--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,165 @@
-baseURL = 'https://vcardillo.github.io/'
-languageCode = 'en-us'
-title = 'Vincent Cardillo'
-theme = 'ananke'
+baseURL = "https://vincentc.io/"
+title = "Gentle Runtime | Vincent Cardillo"
+theme = "PaperMod"
+
+enableRobotsTXT = true
+buildDrafts = false
+buildFuture = false
+buildExpired = false
+
+googleAnalytics = "UA-123-45"
+
+[pagination]
+  pagerSize = 5
+
+[minify]
+  disableXML = true
+  minifyOutput = true
+
+[params]
+  env = "production"
+  title = "Gentle Runtime"
+  description = "Vincent Cardillo's blog and website"
+  keywords = ["Blog", "Portfolio", "PaperMod"]
+  #author = "Me"
+  images = ["<link or path of image for opengraph, twitter-cards>"]
+  DateFormat = "January 2, 2006"
+  defaultTheme = "auto"
+  disableThemeToggle = false
+  ShowReadingTime = false
+  ShowShareButtons = false
+  ShowPostNavLinks = true
+  ShowBreadCrumbs = true
+  ShowCodeCopyButtons = true
+  ShowWordCount = false
+  ShowRssButtonInSectionTermList = true
+  UseHugoToc = true
+  disableSpecial1stPost = false
+  disableScrollToTop = false
+  comments = false
+  hidemeta = false
+  hideSummary = false
+  showtoc = false
+  tocopen = false
+
+  [params.assets]
+    favicon = "<link / abs url>"
+    favicon16x16 = "<link / abs url>"
+    favicon32x32 = "<link / abs url>"
+    apple_touch_icon = "<link / abs url>"
+    safari_pinned_tab = "<link / abs url>"
+
+  [params.label]
+    text = "Home"
+    icon = "/apple-touch-icon.png"
+    iconHeight = 35
+
+  [params.profileMode]
+    enabled = false
+    title = "Gentle Runtime"
+    subtitle = "This is subtitle"
+    imageUrl = "<img location>"
+    imageWidth = 120
+    imageHeight = 120
+    imageTitle = "my image"
+
+    [[params.profileMode.buttons]]
+      name = "Posts"
+      url = "posts"
+
+    [[params.profileMode.buttons]]
+      name = "Tags"
+      url = "tags"
+
+  [params.homeInfoParams]
+    Title = "Hi there 👋"
+    Content = "Hi, I’m Vincent. I’ve worked on engineering teams big and small, across food, finance, healthcare, and more. I write here about things I’ve learned—and things I’m still figuring out."
+
+#  [[params.socialIcons]]
+#    name = "x"
+#    url = "https://x.com/"
+
+#  [[params.socialIcons]]
+#    name = "stackoverflow"
+#    url = "https://stackoverflow.com"
+
+  [[params.socialIcons]]
+    name = "linkedin"
+    url = "https://linkedin.com/in/vcardillo"
+
+  [[params.socialIcons]]
+    name = "github"
+    url = "https://github.com/vcardillo"
+
+  [params.analytics.google]
+    SiteVerificationTag = "XYZabc"
+
+  [params.analytics.bing]
+    SiteVerificationTag = "XYZabc"
+
+  [params.analytics.yandex]
+    SiteVerificationTag = "XYZabc"
+
+  [params.cover]
+    hidden = true
+    hiddenInList = true
+    hiddenInSingle = true
+
+#  [params.editPost]
+#    URL = "https://github.com/<path_to_repo>/content"
+#    Text = "Suggest Changes"
+#    appendFilePath = true
+
+  [params.fuseOpts]
+    isCaseSensitive = false
+    shouldSort = true
+    location = 0
+    distance = 1000
+    threshold = 0.4
+    minMatchCharLength = 0
+    limit = 10
+    keys = ["title", "permalink", "summary", "content"]
+
+[menu]
+
+#  [[menu.main]]
+#    identifier = "categories"
+#    name = "Categories"
+#    url = "/categories/"
+#    weight = 10
+
+  [[menu.main]]
+    identifier = "tags"
+    name = "Tags"
+    url = "/tags/"
+    weight = 20
+
+  [[menu.main]]
+    identifier = "search"
+    name = "Search"
+    url = "/search/"
+    weight = 30
+
+  [[menu.main]]
+    identifier = "rss"
+    name = "RSS"
+    url = "/index.xml"
+    weight = 40
+
+#  [[menu.main]]
+#    identifier = "example"
+#    name = "example.org"
+#    url = "https://example.org"
+#    weight = 30
+
+pygmentsUseClasses = true
 
 [markup]
   [markup.highlight]
-    lineNos = true
+    noClasses = false
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
