Remove public from git; Modify papermod.

--- a/hugo.toml
+++ b/hugo.toml
@@ -41,6 +41,7 @@ googleAnalytics = "UA-123-45"
   hideSummary = false
   showtoc = false
   tocopen = false
+  #customCSS = ["css/custom.css"]
 
   [params.assets]
     favicon = "<link / abs url>"
