Setup for github pages.

--- a/hugo.toml
+++ b/hugo.toml
@@ -164,3 +164,7 @@ pygmentsUseClasses = true
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
