fixing the main content page -- did not happen locally.

--- a/hugo.toml
+++ b/hugo.toml
@@ -42,6 +42,7 @@ googleAnalytics = "UA-123-45"
   showtoc = false
   tocopen = false
   #customCSS = ["css/custom.css"]
+  mainSections = ["posts"]
 
   [params.assets]
     favicon = "<link / abs url>"
